<resources>
    <string name="app_name">ToDoList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="item_title_hint">Enter a title for the item.</string>
    <string name="item_description_hint">Enter description of the item.</string>
    <string name="item_title_label">Title</string>
    <string name="item_details_label">Description</string>
    <string name="item_solved_label">Solved</string>
    <string name="date_picker_title">Date of item:</string>
    <string name="new_item">New Item</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s items</string>
    <string name="add">Add Item</string>
</resources>
