<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_title_label"
        android:background="@android:drawable/alert_light_frame"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/item_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/drawable_pager"
        android:hint="@string/item_title_hint"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/alert_light_frame"
        android:text="@string/item_details_label"
        style="?android:listSeparatorTextViewStyle"/>
    <EditText
        android:id="@+id/item_description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/drawable_pager"
        android:hint="@string/item_description_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"></LinearLayout>

   <Button
       android:layout_height="wrap_content"
       android:layout_width="match_parent"
       android:text="@string/add"
       android:background="@drawable/drawable_button"
       android:id="@+id/add"
       >

   </Button>

</LinearLayout>